tooling/nargo_cli/tests/snapshots/execution_failure/numeric_alias_shadowed_by_caller_param_dep/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Failed constraint
  ┌─ src/main.nr:5:5
  │
5 │     assert(MAX_LEN <= numeric_alias_lib::Cap);
  │     -----------------------------------------
  │
  = Call stack:
    1: main
            at src/main.nr:5:5

Failed to solve program: 'Cannot satisfy constraint'
