tooling/nargo_cli/tests/snapshots/execution_failure/numeric_alias_shadowed_by_caller_param_dep/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed
  ┌─ src/main.nr:5:12
  │
5 │     assert(MAX_LEN <= numeric_alias_lib::Cap);
  │            ---------------------------------
  │
  = Call stack:
    1: ?
            at src/main.nr:4:4

Error interpreting main function
